--- a/.editorconfig
+++ b/.editorconfig
@@ -5,10 +5,8 @@ root = true
 [*]
 end_of_line = lf
 insert_final_newline = true
-
-# Set default charset
 charset = utf-8
 
-# 2 space indentation
-indent_style = space
+# Two space indentation
 indent_size = 2
+indent_style = space
